<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_studio_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.StudioInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_studio_info_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/studio_info_header_size"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctbl_studio_info_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_studio_info_header_avatar"
                    android:layout_width="@dimen/header_avatar_size"
                    android:layout_height="@dimen/header_avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <TextView
                    android:id="@+id/tv_studio_info_header_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="@dimen/big_font_size"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:hint="匿名工作室" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_studio_info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingRight="@dimen/activity_horizontal_padding"
                app:layout_collapseMode="pin" >

                <TextView
                    android:id="@+id/tv_studio_info_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:visibility="gone"
                    android:textSize="@dimen/big_font_size"
                    android:textColor="@color/white"
                    android:text="编辑" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/white" >

                <LinearLayout
                    android:id="@+id/ll_studio_info_questions"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/normal_font_size"
                        android:textColor="@color/grey"
                        android:text="问题" />

                    <TextView
                        android:id="@+id/tv_studio_info_questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/windowBackground" />

                <LinearLayout
                    android:id="@+id/ll_studio_info_members"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/normal_font_size"
                        android:textColor="@color/grey"
                        android:text="成员列表" />

                    <TextView
                        android:id="@+id/tv_studio_info_members"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/windowBackground" />

                <LinearLayout
                    android:id="@+id/ll_studio_info_essays"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/normal_font_size"
                        android:textColor="@color/grey"
                        android:text="文章" />

                    <TextView
                        android:id="@+id/tv_studio_info_essays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:background="@color/white" >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_studios"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="名称" />

                <TextView
                    android:id="@+id/tv_studio_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:hint="匿名工作室"
                    android:textColorHint="@color/fentchGrey"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:background="@color/white" >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_account"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="管理员" />

                <TextView
                    android:id="@+id/tv_studio_info_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:hint="未设置"
                    android:textColorHint="@color/fentchGrey" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_studio_info_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/icon_fab"
        app:fab_expandDirection="left"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_labelsPosition="left"
        app:layout_anchor="@id/abl_studio_info_app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        android:visibility="gone" >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_studio_info_fab_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            android:src="@drawable/icon_by_text" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_studio_info_fab_by_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            android:src="@drawable/icon_by_voice" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
