<resources>
    <string name="app_name">SchooledIn</string>
    <string name="font_brush_script_std">fonts/BrushScriptStd.otf</string>
    <string name="manifest_label_user_studios">用户工作室</string>
    <string name="manifest_label_favorites">用户收藏</string>
    <string name="manifest_label_user_questions">用户问题</string>
    <string name="manifest_label_user_answers">用户回答</string>
    <string name="manifest_label_my_notifications">我的通知</string>
    <string name="manifest_label_studio_essays">工作室文章</string>
    <string name="manifest_label_studio_questions">工作室问题</string>
    <string name="manifest_label_studio_members">工作室成员</string>
    <string name="manifest_label_question">问题</string>
    <string name="manifest_label_answer">回答</string>
    <string name="manifest_label_rich_editor">富文本编辑器</string>
    <string name="manifest_label_rich_text_show">显示富文本</string>
    <string name="manifest_label_publish_answer">发表回答</string>
...
