<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.UserInfoActivity">

    <android.support.design.widget.AppBarLayout
...
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user_info_header_avatar"
                    android:layout_width="@dimen/header_avatar_size"
                    android:layout_height="@dimen/header_avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />
...
                        android:gravity="center"
                        android:textSize="@dimen/normal_font_size"
                        android:textColor="@color/grey"
                        android:text="我的问题" />

                    <TextView
                        android:id="@+id/tv_user_info_questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
...
                        android:gravity="center"
                        android:textSize="@dimen/normal_font_size"
                        android:textColor="@color/grey"
                        android:text="我的回答" />

                    <TextView
                        android:id="@+id/tv_user_info_answers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
...
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="用户名" />

                <TextView
                    android:id="@+id/tv_user_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
...
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="邮箱" />

                <TextView
                    android:id="@+id/tv_user_info_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey" />
...
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="手机" />

                <TextView
                    android:id="@+id/tv_user_info_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
...
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:text="院系" />

                <TextView
                    android:id="@+id/tv_user_info_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textSize="@dimen/normal_font_size"
                    android:textColor="@color/grey"
                    android:hint="未设置"
                    android:textColorHint="@color/fentchGrey" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_user_info_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
...
